syntax = "proto3";

package salvo;

// Capture the location of sources needed for the benchmark
message SourceRepository {

  // Specify whether this source location is Envoy or NightHawk
  enum SourceIdentity {
    SRCID_UNSPECIFIED = 0;
    SRCID_ENVOY = 1;
    SRCID_NIGHTHAWK = 2;
  }

  SourceIdentity identity = 1;

  oneof source_location {
    // Specify the location of the source repository on disk. If specified
    // this location is used to determine the origin url, branch, and commit
    // hash. If not specified, the remaining fields must be populated
    // eg: "/home/user/code/envoy"
    string source_path = 2;

    // Specify the remote location of the repository.
    // eg: "https://github.com/envoyproxy/envoy.git"
    string source_url = 3;
  }

  // Specify the local working branch. This is ignored if the source
  // location is specified.
  string branch = 4;

  // Specify a commit hash if applicable. If not specified we will
  // determine this from the source tree. We will also use this field
  // to identify the corresponding NightHawk or Envoy image used for
  // the benchmark
  string commit_hash = 5;

  // Specify a set of additional hashes for comparing benchmark results.
  // This field is optional and if unspecified, we will default to using
  // one commit prior to the specified "commit_hash" field.  For each
  // hash specfied we will run a benchmark using the Envoy binary built
  // from that source commit
  repeated string additional_hashes = 6;
}
